# Python_Module08

./: .gitignore
ex0/: construct.py
ex01/: loading.py  pyproject.toml  requirements.txt
ex02/: .env.example  .gitignore  oracle.py
tests/: test_loading.py  test_oracle.py
