[tool.poetry]
name = "loading-programs"
version = "1.0.0"
description = "For Python_Module08 ex01 loading.py"
authors = ["miwasaki miwasaki@student.42tokyo.jp"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"
numpy = "*"
matplotlib = "3.7.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
